--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
   </header>
 
   <main>
-    <img src="https://sdmntprwestus.oaiusercontent.com/files/00000000-ee0c-6230-9214-8bffa7e957a8/raw?se=2025-09-15T11%3A05%3A22Z&sp=r&sv=2024-08-04&sr=b&scid=aa60f186-f8ee-5f02-b740-c31f677da666&skoid=b64a43d9-3512-45c2-98b4-dea55d094240&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2025-09-14T19%3A02%3A22Z&ske=2025-09-15T19%3A02%3A22Z&sks=b&skv=2024-08-04&sig=GaeQDKwLkNdSz8lPVmFnut3%2BQ4yr%2B5ttHBtmhKIA3DA%3D" alt="Logo" style="width: 225px; height: 225px;">
+    <img src="nuvologo.jpeg" alt="Nuvo Logo" style="width: 225px; height: 225px;">
     <h2>
-    NUVO was founded by dansjpg with a bold mission: to redefine photography forever. The idea was simple but powerful—create a space where photographers, creatives, and visual storytellers could find inspiration, practical guidance, and a platform to showcase their work. It’s not just another blog or magazine—it’s both, combining the storytelling depth of a blog with the polished, curated experience of a magazine.
-
-    Think of it as a Photographer’s 101 guide—whether you’re just starting out or already seasoned, NUVO gives you the tools, tips, and creative insights to level up your craft. From striking visuals to in-depth stories behind each shot, it’s a hub where creativity meets education, and where photographers can stay connected and inspired.
-
-    Basically, NUVO isn’t just about looking at photos—it’s about understanding, learning, and pushing the boundaries of photography.
+      NUVO was founded by dansjpg with a bold mission: to redefine photography forever. The idea was simple but powerful—create a space where photographers, creatives, and visual storytellers could find inspiration, practical guidance, and a platform to showcase their work. It’s not just another blog or magazine—it’s both, combining the storytelling depth of a blog with the polished, curated experience of a magazine.
+      <br><br>
+      Think of it as a Photographer’s 101 guide—whether you’re just starting out or already seasoned, NUVO gives you the tools, tips, and creative insights to level up your craft. From striking visuals to in-depth stories behind each shot, it’s a hub where creativity meets education, and where photographers can stay connected and inspired.
+      <br><br>
+      Basically, NUVO isn’t just about looking at photos—it’s about understanding, learning, and pushing the boundaries of photography. 
     </h2>
   </main>
 
