--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   </header>
 
   <main>
-    <img src="nuvologo.jpeg" alt="Nuvo Logo" style="width: 225px; height: 225px;">
+    <img src="nuvologo.png" alt="Nuvo Logo" style="width: 225px; height: 225px;">
     <h2>
       NUVO was founded by dansjpg with a bold mission: to redefine photography forever. The idea was simple but powerful—create a space where photographers, creatives, and visual storytellers could find inspiration, practical guidance, and a platform to showcase their work. It’s not just another blog or magazine—it’s both, combining the storytelling depth of a blog with the polished, curated experience of a magazine.
       <br><br>
@@ -95,3 +95,4 @@
 
 </body>
 </html>
+
